--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JR News Media - Local News from Achalpur & Amravati</title>
+    <title>JR News Media - Local News from Achalpur & Amravati</title>
+<meta name="description" content="Taaza khabar, local reporting, aur exclusive stories Achalpur, Amravati, aur Maharashtra se. Get the latest news, politics, sports, and entertainment updates from JR News Media.">
+
     <style>
         /* Desi CSS shuru! */
         body {
