--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
     <div class="container">
         <section class="main-content">
             <article class="news-article">
-                <h2 class="article-title">ACHALPUR: Municipal Corporation Ne Safai Abhiyan Shuru Kiya</h2>
-                <p class="meta">By Our Reporter | October 27, 2025 | Local News</p>
-                <img src="https://via.placeholder.com/650x350?text=Placeholder+Image+for+Featured+News" alt="Safai Abhiyan Image" class="article-image">
-                <p>Achalpur Nagar Nigam ne aaj subah shehar bhar mein ek bade safai abhiyan ki shuruaat ki. Is abhiyan mein safai karamchariyon ne ghar-ghar jaakar kachra jama kiya. Nigam ke Adhikari ne logon se sahyog ki appeal ki hai.</p>
-                <a href="#" style="color: #D32F2F; text-decoration: none; font-weight: bold;">Read More...</a>
+    <h2 class="article-title">Achalpur Nagar Nigam Chunav ki Ghosna Jald: December 2025 Ya January 2026 Mein Sambhav</h2>
+    <p class="meta">By JR News Reporter | October 27, 2025 | Local Politics</p>
+    <img src="images/image-3.png" alt="Achalpur Chunav Image" class="article-image">
+    <p>Achalpur mein Nagar Sevak chunavon ka intzaar ab khatam hone wala hai. Sarkaari sootron se mili jaankari ke mutabik, sthaniya nagar nigam chunav December 2025 ya January 2026 mein hone ki sambhavna hai. Poore shehar mein is khabar se rajneetik sargarmi badh gayi hai.</p>
+    <a href="articles/achalpur-chunav-ghosna-jald.html" style="color: #D32F2F; text-decoration: none; font-weight: bold;">Poori Khabar Padhein...</a>
             </article>
-
+            
             <article class="news-article">
                 <h2 class="article-title">Amravati: Kal College Ke Students Ne Protest Kiya</h2>
                 <p class="meta">By Student Correspondent | 2 hours ago | Education</p>
