--- a/index.html
+++ b/index.html
@@ -147,10 +147,13 @@
             </article>
             
             <article class="news-article">
-                <h2 class="article-title">Amravati: Kal College Ke Students Ne Protest Kiya</h2>
-                <p class="meta">By Student Correspondent | 2 hours ago | Education</p>
-                <p>Amravati University ke bahar aaj students ne naye exam system ke khilaf shantipoorn virodh pradarshan kiya. Students ki mang hai ki purana system wapas laaya jae.</p>
-            </article>
+    <h2 class="article-title">Achalpur Chunav: Umeedwaron Ne Taiyaari Shuru Ki, Meeting Ka Daura Shuru</h2>
+    <p class="meta">By Political Correspondent | October 27, 2025 | Local Politics</p>
+    <img src="https://via.placeholder.com/650x350?text=Achalpur+Political+Meeting" alt="Achalpur meeting image" class="article-image"> 
+    <p>Nagar Nigam chunav ki khabar aate hi, Achalpur ke sambhavit umeedwaron ne kshetra mein gupt meeting aur logon se milna shuru kar diya hai. Har party jald se jald apne karyakartaon ko taiyaar karne mein lagi hai.</p>
+    <a href="#" style="color: #D32F2F; text-decoration: none; font-weight: bold;">Poori Khabar Padhein...</a>
+</article>
+
         </section>
 
         <aside class="sidebar">
