--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="description" content="Taaza khabar, local reporting, aur exclusive stories Achalpur, Amravati, aur Maharashtra se. Get the latest news, politics, sports, and entertainment updates from JR News Media.">
 
     <style>
-        /* Desi CSS shuru! (Clean & Professional Look) */
+        /* CSS Cleaned and Optimized for Desktop/Mobile */
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0; /* Light Gray Background */
+            background-color: #f0f0f0; 
             color: #333;
             line-height: 1.5;
         }
@@ -27,14 +27,13 @@
         }
 
         .logo {
-            font-size: 32px; /* Bigger Logo */
-            font-weight: 900; /* Extra Bold */
+            font-size: 32px; 
+            font-weight: 900; 
             margin: 0;
-            letter-spacing: 1px;
         }
 
         .navbar {
-            background-color: #B71C1C; /* Darker red */
+            background-color: #B71C1C; 
             overflow: hidden;
             text-align: center;
         }
@@ -42,7 +41,6 @@
         .navbar a {
             display: inline-block;
             color: white;
-            text-align: center;
             padding: 14px 20px;
             text-decoration: none;
             font-size: 16px;
@@ -54,17 +52,15 @@
             background-color: #E57373;
         }
 
-        /* Main Content Area */
+        /* Main Content Area (Layout Fix) */
         .container {
             width: 90%;
-            max-width: 1200px; /* Max width for large screens */
+            max-width: 1200px; 
             margin: 20px auto;
-            overflow: hidden;
-            padding: 0;
+            overflow: hidden; /* Clear floats */
         }
 
         .main-content {
-            /* Desktop View Settings */
             float: left;
             width: 65%;
             box-sizing: border-box;
@@ -72,7 +68,6 @@
         }
 
         .sidebar {
-            /* Desktop View Settings */
             float: right;
             width: 35%;
             background: #ffffff; 
@@ -86,22 +81,21 @@
         /* News Article Design */
         .news-article {
             background: #fff;
-            padding: 25px; /* Increased padding */
-            margin-bottom: 25px; /* Increased spacing */
-            border-radius: 8px; /* Softer corners */
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Better shadow */
-            border-left: 5px solid #D32F2F; /* Red highlight line */
+            padding: 25px; 
+            margin-bottom: 25px; 
+            border-radius: 8px; 
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
+            border-left: 5px solid #D32F2F; 
         }
 
         .article-title {
-            color: #1a1a1a; /* Dark title for professionalism */
+            color: #1a1a1a; 
             font-size: 24px;
             font-weight: 700;
             margin-top: 0;
             line-height: 1.3;
         }
         
-        /* New style for read more link */
         .read-more {
             color: #D32F2F;
             text-decoration: none;
@@ -137,14 +131,6 @@
             border-bottom: 2px solid #D32F2F;
             padding-bottom: 5px;
         }
-        .sidebar ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        .sidebar li {
-            margin-bottom: 8px;
-            font-size: 15px;
-        }
         .sidebar li a {
             color: #333;
             text-decoration: none;
@@ -165,7 +151,7 @@
         /* Responsive Design (Mobile Fix) */
         @media (max-width: 768px) {
             .container {
-                width: 95%; /* Mobile par full width */
+                width: 95%; 
             }
             .main-content, .sidebar {
                 width: 100%;
@@ -178,7 +164,7 @@
                 margin-top: 15px;
             }
             .news-article {
-                border-radius: 0; /* Full edge-to-edge look */
+                border-radius: 0; 
                 border-left: none;
             }
         }
@@ -237,7 +223,6 @@
             </p>
         </aside>
     </div>
-
     <footer class="footer">
         &copy; 2025 JR News Media. All rights reserved. | Contact: <a href="mailto:sharikk955@gmail.com" style="color: white; text-decoration: none;">sharikk955@gmail.com</a>
     </footer>
