--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
             <article class="news-article">
                 <h2 class="article-title">Achalpur Nagar Nigam Chunav ki Ghosna Jald: December 2025 Ya January 2026 Mein Sambhav</h2>
                 <p class="meta">By JR News Reporter | October 27, 2025 | Local Politics</p>
-                <img src="images/Achalpur%20Nagar%20Nigam.jpg" alt="Achalpur Nagar Nigam Building Chunav Image" class="article-image">
-                <p>Achalpur Nagar Nigam Chunav ki ghoshna jald hone ki sambhavna hai. Sarkaari sootron ke mutabik, sthaniya nagar nigam chunav December 2025 ya January 2026 mein ho sakte hain. Is khabar se rajneetik sargarmi badh gayi hai.</p>
+            <img src="images/image-3.png" alt="Achalpur Chunav ki Ghosna Jald" class="article-image">
+ <p>Achalpur Nagar Nigam Chunav ki ghoshna jald hone ki sambhavna hai. Sarkaari sootron ke mutabik, sthaniya nagar nigam chunav December 2025 ya January 2026 mein ho sakte hain. Is khabar se rajneetik sargarmi badh gayi hai.</p>
                 <a href="articles/achalpur-chunav-ghosna-jald.html" class="read-more">Poori Khabar Padhein...</a>
             </article>
 
