--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         
         </section>
 
-        <aside class="sidebar">
+  <aside class="sidebar">
     <h3>🔥 Trending News</h3>
     <ul style="list-style: none; padding: 0;">
         <li style="margin-bottom: 10px; padding-bottom: 5px; border-bottom: 1px dotted #ccc;"><a href="#" style="color: #D32F2F; text-decoration: none; font-weight: bold;">- Amravati Nagar Nigam Ke Naye Niyam Jald</a></li>
@@ -217,8 +217,13 @@
     </ul>
 
     <h3 style="margin-top: 30px;">Social Connect</h3>
-        </aside>
-        
+    <p>Follow JR News Media on all platforms for real-time updates.</p>
+    <p style="margin-top: 20px; font-size: 14px; font-weight: bold;">
+        <a href="https://www.instagram.com/sharik.khan.jr?igsh=N3ExY25sZW9rOTN0" target="_blank" style="color: #D32F2F; text-decoration: none; display: block; margin-bottom: 5px;">Instagram</a>
+        <a href="https://www.facebook.com/Sharikkhanjr1" target="_blank" style="color: #D32F2F; text-decoration: none; display: block; margin-bottom: 5px;">Facebook</a>
+        <a href="https://youtube.com/@sharikkhanjr?si=w3jCs5UJTPf2-arm" target="_blank" style="color: #D32F2F; text-decoration: none; display: block;">YouTube (Artist)</a>
+    </p>
+  </aside>  
     </div>
     <footer class="footer">
         &copy; 2025 JR News Media. All rights reserved. | Contact: <a href="mailto:sharikk955@gmail.com" style="color: white; text-decoration: none;">sharikk955@gmail.com</a>
