--- a/index.html
+++ b/index.html
@@ -181,12 +181,14 @@
         <p style="font-size: 14px; margin: 0;">*Taaza Khabar, Desi Zabaan Mein*</p>
     </header>
     <nav class="navbar">
+          
+        <nav class="navbar">
         <a href="index.html">HOME</a>
-        <a href="#">LOCAL (Amravati)</a>
-        <a href="#">SPORTS</a>
+        <a href="local.html">LOCAL (Amravati)</a> <a href="#">SPORTS</a>
         <a href="#">POLITICS</a>
         <a href="#">ENTERTAINMENT</a>
-    </nav>
+            </nav>
+        
 
     <div class="container">
         <section class="main-content">
