--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
           
         <nav class="navbar">
         <a href="index.html">HOME</a>
-        <a href="local.html">LOCAL (Amravati)</a> <a href="#">SPORTS</a>
+        <a href="local.html">LOCAL (Amravati)</a>   <a href="sports.html">SPORTS</a> <a href="#">POLITICS</a>
+        <a
         <a href="#">POLITICS</a>
         <a href="#">ENTERTAINMENT</a>
             </nav>
