--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <p class="meta">By JR News Reporter | October 27, 2025 | Local Politics</p>
             <img src="images/image-3.png" alt="Achalpur Chunav ki Ghosna Jald" class="article-image">
  <p>Achalpur Nagar Nigam Chunav ki ghoshna jald hone ki sambhavna hai. Sarkaari sootron ke mutabik, sthaniya nagar nigam chunav December 2025 ya January 2026 mein ho sakte hain. Is khabar se rajneetik sargarmi badh gayi hai.</p>
-                <a href="articles/achalpur-chunav-ghosna-jald.html" class="read-more">Poori Khabar Padhein...</a>
+                <a href="articles/achalpur-chunav-ghosna-jald.html" class="read-more">REED FULL ARTICLE...</a>
             </article>
 
             <article class="news-article">
@@ -206,7 +206,7 @@
                 <p class="meta">By Political Correspondent | October 27, 2025 | Local Politics</p>
                 <img src="images/Achalpur%20Nagar%20Nigam.jpg" alt="Achalpur meeting image" class="article-image"> 
                 <p>Nagar Nigam chunav ki khabar aate hi, Achalpur ke sambhavit umeedwaron ne kshetra mein gupt meeting aur logon se milna shuru kar diya hai. Har party jald se jald apne karyakartaon ko taiyaar karne mein lagi hai.</p>
-                <a href="articles/umeedwar-taiyari.html" class="read-more">Poori Khabar Padhein...</a>
+                <a href="articles/umeedwar-taiyari.html" class="read-more">REED FULL ARTICLE...</a>
             </article>
         
         </section>
@@ -231,7 +231,7 @@
   </aside>  
     </div>
     <footer class="footer">
-        &copy; 2025 JR News Media. All rights reserved. | Contact: <a href="mailto:sharikk955@gmail.com" style="color: white; text-decoration: none;">sharikk955@gmail.com</a>
+        &copy; 2025 JR News Media. All rights reserved. | Contact: <a href="mailto:rasimkhan453@gmail.com" style="color: white; text-decoration: none;">sharikk955@gmail.com</a>
     </footer>
 
 </body>
