--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <p class="meta">By Political Correspondent | October 27, 2025 | Local Politics</p>
                 <img src="images/Achalpur%20Nagar%20Nigam.jpg" alt="Achalpur meeting image" class="article-image"> 
                 <p>Nagar Nigam chunav ki khabar aate hi, Achalpur ke sambhavit umeedwaron ne kshetra mein gupt meeting aur logon se milna shuru kar diya hai. Har party jald se jald apne karyakartaon ko taiyaar karne mein lagi hai.</p>
-                <a href="articles/umeedwar-taiyari.html" class="read-more">REED FULL ARTICLE...</a>
+                <a href="articles/umeedwar-taiyari.html" class="yellow-more">REED FULL ARTICLE...</a>
             </article>
         
         </section>
