--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@
     <div class="container">
         <section class="main-content">
             
-            <article class="news-article">
+                        <article class="news-article">
                 <h2 class="article-title">Achalpur Nagar Nigam Chunav ki Ghosna Jald: December 2025 Ya January 2026 Mein Sambhav</h2>
                 <p class="meta">By JR News Reporter | October 27, 2025 | Local Politics</p>
-            <img src="images/image-3.png" alt="Achalpur Chunav ki Ghosna Jald" class="article-image">
- <p>Achalpur Nagar Nigam Chunav ki ghoshna jald hone ki sambhavna hai. Sarkaari sootron ke mutabik, sthaniya nagar nigam chunav December 2025 ya January 2026 mein ho sakte hain. Is khabar se rajneetik sargarmi badh gayi hai.</p>
-                <a href="articles/achalpur-chunav-ghosna-jald.html" class="read-more">REED FULL ARTICLE...</a>
+                <img src="images/image-3.png" alt="Achalpur Nagar Nigam Building Chunav Image" class="article-image">
+                <p>Achalpur Nagar Nigam Chunav ki ghoshna jald hone ki sambhavna hai. Sarkaari sootron ke mutabik, sthaniya nagar nigam chunav December 2025 ya January 2026 mein ho sakte hain. Is khabar se rajneetik sargarmi badh gayi hai.</p>
+                <a href="articles/achalpur-chunav-ghosna-jald.html" class="read-more">READ FULL ARTICLE...</a>
             </article>
 
             <article class="news-article">
@@ -206,7 +206,7 @@
                 <p class="meta">By Political Correspondent | October 27, 2025 | Local Politics</p>
                 <img src="images/Achalpur%20Nagar%20Nigam.jpg" alt="Achalpur meeting image" class="article-image"> 
                 <p>Nagar Nigam chunav ki khabar aate hi, Achalpur ke sambhavit umeedwaron ne kshetra mein gupt meeting aur logon se milna shuru kar diya hai. Har party jald se jald apne karyakartaon ko taiyaar karne mein lagi hai.</p>
-                <a href="articles/umeedwar-taiyari.html" class="yellow-more">REED FULL ARTICLE...</a>
+                <a href="articles/umeedwar-taiyari.html" class="read-more">READ FULL ARTICLE...</a>
             </article>
         
         </section>
