--- a/index.html
+++ b/index.html
@@ -192,12 +192,13 @@
         
     <div class="container">
         <section class="main-content">
-                                    <article class="news-article">
+
+     <article class="news-article">
                 <h2 class="article-title">Achalpur Nagar Nigam Chunav ki Ghosna Jald: December 2025 Ya January 2026 Mein Sambhav</h2>
                 <p class="meta">By JR News Reporter | October 27, 2025 | Local Politics</p>
                 <img src="images/image-3.png" alt="Achalpur Nagar Nigam Building Chunav Image" class="article-image">
                 <p>Achalpur Nagar Nigam Chunav ki ghoshna jald hone ki sambhavna hai. Sarkaari sootron ke mutabik, sthaniya nagar nigam chunav December 2025 ya January 2026 mein ho sakte hain. Is khabar se rajneetik sargarmi badh gayi hai.</p>
-                <a href="articles/achalpur-chunav-ghosna-jald.html" class="read-more">READ FULL ARTICLE...</a>
+                <a href="articles/achalpur-chunav-ghosna-jald.html" class="read-more">Poori Khabar Padhein...</a>
             </article>
 
             <article class="news-article">
@@ -205,13 +206,13 @@
                 <p class="meta">By Political Correspondent | October 27, 2025 | Local Politics</p>
                 <img src="images/Achalpur%20Nagar%20Nigam.jpg" alt="Achalpur meeting image" class="article-image"> 
                 <p>Nagar Nigam chunav ki khabar aate hi, Achalpur ke sambhavit umeedwaron ne kshetra mein gupt meeting aur logon se milna shuru kar diya hai. Har party jald se jald apne karyakartaon ko taiyaar karne mein lagi hai.</p>
-                <a href="articles/umeedwar-taiyari.html" class="read-more">READ FULL ARTICLE...</a>
+                <a href="articles/umeedwar-taiyari.html" class="read-more">Poori Khabar Padhein...</a>
             </article>
 
             <article class="news-article" style="text-align: center; border: 2px dashed #3498db; padding: 20px; background-color: #f7f9fc;">
                 <h2 class="article-title" style="color: #3498db; font-size: 24px; margin-top: 0; border-bottom: none;">AGLI LOCAL KHABAR JALD AA RAHI HAI!</h2>
                 <p style="font-size: 16px; font-weight: bold; color: #333;">TOPIC: Amravati Nagar Nigam Ke Naye Niyam</p>
-            </article>
+            </article>                                
 
         </section>
 
