--- a/index.html
+++ b/index.html
@@ -162,6 +162,30 @@
         .sidebar li a:hover {
             color: #D32F2F;
         }
+
+        /* New Tip Us Box Style */
+        .tip-box {
+            background-color: #f5f5f5;
+            padding: 15px;
+            border-radius: 8px;
+            border: 1px solid #ddd;
+            text-align: center;
+            margin-top: 30px;
+        }
+        .tip-button {
+            background-color: #2ECC71; /* Green Button */
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            font-weight: bold;
+            display: block;
+            margin-top: 10px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .tip-button:hover {
+            background-color: #27AE60;
+        }
         
         /* Footer */
         .footer {
@@ -249,17 +273,16 @@
                 <li style="margin-bottom: 10px;"><a href="#" style="color: #333; text-decoration: none;">- Shehar Mein Paani Ki Killeet Par Taaza Report</a></li>
             </ul>
 
-            <h3 style="margin-top: 30px;">Social Connect</h3>
-            <p>Follow JR News Media on all platforms for real-time updates.</p>
-            <p style="margin-top: 20px; font-size: 14px; font-weight: bold;">
-                <a href="https://www.instagram.com/sharik.khan.jr?igsh=N3ExY25sZW9rOTN0" target="_blank" style="color: #D32F2F; text-decoration: none; display: block; margin-bottom: 5px;">Instagram</a>
-                <a href="https://www.facebook.com/Sharikkhanjr1" target="_blank" style="color: #D32F2F; text-decoration: none; display: block; margin-bottom: 5px;">Facebook</a>
-                <a href="https://youtube.com/@sharikkhanjr?si=w3jCs5UJTPF2-arm" target="_blank" style="color: #D32F2F; text-decoration: none; display: block;">YouTube (Artist)</a>
-            </p>
+            <div class="tip-box">
+                <h3>💬 Aapki Khabar Bhejein!</h3>
+                <p style="font-size: 14px; color: #555;">Agar aapke paas koi local khabar, photo ya video hai, toh humein turant bhejein.</p>
+                <a href="mailto:rasimkhan453@gmail.com?subject=News Tip for JR News Media" class="tip-button">Humein Email Karein</a>
+            </div>
         </aside>  
     </div>
+    
     <footer class="footer">
-        &copy; 2025 JR News Media. All rights reserved. | Contact: <a href="mailto:sharikk955@gmail.com" style="color: white; text-decoration: none;">sharikk955@gmail.com</a>
+        &copy; 2025 JR News Media. All rights reserved. | Contact: <a href="mailto:rasimkhan453@gmail.com" style="color: white; text-decoration: none;">rasimkhan453@gmail.com</a>
     </footer>
 
 </body>
