--- a/index.html
+++ b/index.html
@@ -262,7 +262,15 @@
                 <h2 class="article-title" style="color: #3498db; font-size: 24px; margin-top: 0; border-bottom: none;">AGLI KHABAR JALD AA RAHI HAI!</h2>
                 <p style="font-size: 16px; font-weight: bold; color: #333;">TOPIC: Amravati Nagar Nigam Ke Naye Niyam</p>
             </article>
-        
+
+            <article class="news-article">
+  <h2 class="article-title">शारिक खान जेआर का नया धमाका "MERA ATTITUDE"</h2>
+  <p class="meta">By यश वांखड़े | October 29, 2025 | Music News</p>
+  <img src="https://raw.githubusercontent.com/JRNewsMedia/JRNewsMedia.github.io/main/images/20251023_143435.jpg" alt="शारिक खान जेआर" class="article-image">
+  <p>भारतीय इंडिपेंडेंट म्यूजिक की दुनिया में शारिक खान जेआर ने अपनी नई हिट सिंगल "MERA ATTITUDE" के ज़रिए बड़ा नाम कमाया है। यह गाना युवाओं में खूब लोकप्रिय हो रहा है और Spotify, JioSaavn, Boomplay समेत सभी प्रमुख प्लेटफॉर्म्स पर उपलब्ध है।</p>
+  <a href="articles/sharik-khan-jr-new-song.html" class="read-more">READ FULL ARTICLE...</a>
+</article> 
+            
         </section>
 
         <aside class="sidebar">
