--- a/entertainment.html
+++ b/entertainment.html
@@ -213,11 +213,21 @@
   <a href="articles/sharik-khan-jr-new-song.html" class="read-more">READ FULL ARTICLE...</a>
 </article>
 
-            <article class="news-article" style="text-align: center; border: 2px dashed #e74c3c; padding: 40px; background-color: #fff7f7;">
-                <h2 class="article-title" style="color: #e74c3c; font-size: 30px; margin-top: 0; border-bottom: none;">ENTERTAINMENT KHABREIN JALD AA RAHI HAIN!</h2>
-                <p style="font-size: 18px; color: #555;">Film reviews, music updates, aur local entertainment events ki coverage jald shuru hogi.</p>
-                <p style="font-weight: bold; margin-top: 20px;">Humare saath bane rahein!</p>
-            </article>
+            <article class="news-article" style="text-align:center; border:2px dashed #e74c3c; padding:38px 25px; background-color:#fff7f7; margin-bottom:28px;">
+  <img src="https://cdn-icons-png.flaticon.com/512/727/727240.png" alt="Music Icon" style="width:64px; margin-bottom:18px;">
+  <h2 class="article-title" style="color:#e74c3c; font-size:30px; margin-top:0; border-bottom:none;">
+    ENTERTAINMENT ZONE • तगड़ा म्यूजिक &amp; मसाला!
+  </h2>
+  <p style="font-size:18px; color:#444;">
+    Filmy news, music reviews, celebrity updates aur Amravati local masti — sab kuch yaha milega!<br>
+    हर हफ्ते नया धमाका, trending rap &amp; hits, exclusive interviews bhi jaldi aa rahe hain.
+  </p>
+  <div style="margin-top:20px; font-size:17px; color:#444;">
+    <b>फिलहाल Enjoy करें:&nbsp; <a href="articles/sharik-khan-jr-new-song.html" style="color:#e74c3c; font-weight:600; text-decoration:none; border-bottom:2px dotted #e74c3c;">MERA ATTITUDE – शारिक खान जेआर</a></b>
+    <br>
+    <span style="font-size:15px; color:#999;">Aur entertainment updates ke liye site ko bookmark karein!</span>
+  </div>
+</article>
         
         </section>
 
