--- a/index.html
+++ b/index.html
@@ -242,6 +242,14 @@
                 <h2>⭐ FEATURED NEWS</h2>
             </div>
 
+<article class="news-article">
+    <h2 class="article-title">इंडस्ट्री में हलचल! मशहूर टीवी अभिनेत्री मानसी श्रीवास्तव ने किसे भेजा विशेष बर्थडे वीडियो संदेश?</h2>
+    <p class="meta">By JR News Reporter | November 3, 2025 | Entertainment</p>
+    <img src="https://raw.githubusercontent.com/Sharikkhanjr/Sharik-khan-jr-birthday-biography-/refs/heads/main/images/Mansi%20Srivastava%20birthday%20wish.jpg" alt="मानसी श्रीवास्तव का बर्थडे संदेश" class="article-image">
+    <p>टेलीविजन की जानीमानी अभिनेत्री मानसी श्रीवास्तव ने संगीत पर्सनालिटी शारिक खान जेआर को जन्मदिन पर एक खास वीडियो संदेश भेजा, जिसे सोशल मीडिया पर खूब सराहा जा रहा है। जानें इस हार्दिक बधाई का पूरा सफर।</p>
+    <a href="articles/mansi-srivastava-bday-message-jr-news.html" class="read-more">READ FULL ARTICLE...</a>
+</article>
+            
             <article class="news-article">
                 <h2 class="article-title">Achalpur Nagar Nigam Chunav ki Ghosna Jald: December 2025 Ya January 2026 Mein Sambhav</h2>
                 <p class="meta">By JR News Reporter | October 27, 2025 | Local Politics</p>
