--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <p class="meta">By JR News Desk | November 9, 2025 | Entertainment</p>
     <img src="https://raw.githubusercontent.com/Sharikkhanjr/Sharik-khan-jr-birthday-biography-/main/images/Shipra%20Kasana.jpg" alt="Bollywood Actress Shipra Kasana shows support for Sharik khan jr" class="article-image">
     <p>In a major boost for local talent, Bollywood star Shipra Kasana sends a viral video message urging the people of Achalpur-Paratwada to lend full support to local artist Sharik khan jr and his group.</p>
-    <a href="shipra-kasana-supports-sharik-khan-jr-english.html" class="read-more">READ FULL ARTICLE...</a>
+    <a href="https://jrnewsmedia.github.io/articles/shipra-kasana-supports-sharik-khan-jr-english.html" class="read-more">READ FULL ARTICLE...</a>
 </article>
             
 <article class="news-article">
