--- a/index.html
+++ b/index.html
@@ -242,6 +242,14 @@
                 <h2>⭐ FEATURED NEWS</h2>
             </div>
 
+<article class="news-article">
+    <h2 class="article-title">Digital Queen Mahee Pande Sends Special Video Wish to Sharik khan jr, Fuels Collaboration Rumours</h2>
+    <p class="meta">By Neha Naaz | November 11, 2025 | Celebrity News</p>
+    <img src="https://github.com/Sharikkhanjr/Sharik-khan-jr-birthday-biography-/raw/main/images/Mahee%20pande.jpg" alt="Fashion and lifestyle digital creator Mahee Pande in a studio setting." class="article-image">
+    <p>Digital sensation Mahee Pande sends a heartfelt video message to actor and producer Sharik khan jr, extending best wishes for his upcoming projects and the JR Group in Achalpur.</p>
+    <a href="https://jrnewsmedia.github.io/articles/mahee-sharik-jrnews.html" class="read-more">READ FULL ARTICLE...</a>
+</article>
+            
         <article class="news-article">
     <h2 class="article-title">Bollywood Actress Shipra Kasana Backs Sharik khan jr Group</h2>
     <p class="meta">By JR News Desk | November 9, 2025 | Entertainment</p>
