--- a/index.html
+++ b/index.html
@@ -241,7 +241,36 @@
             <div class="category-header">
                 <h2>⭐ FEATURED NEWS</h2>
             </div>
+            
+<article class="news-article">
+    <h2 class="article-title">
+        Sharik Khan Jr: A Rising Independent Music Artist Making Waves Across Digital Platforms
+    </h2>
 
+    <p class="meta">
+        By JR News Desk | 2025 | Entertainment
+    </p>
+
+    <img 
+        src="https://raw.githubusercontent.com/JRNewsMedia/JRNewsMedia.github.io/refs/heads/main/images/Sharik%20khan%20jr%20music%20artists%20achalpur.png" 
+        alt="Sharik Khan Jr Independent Music Artist from Achalpur"
+        class="article-image"
+        loading="lazy"
+    >
+
+    <p>
+        Indian independent music scene is witnessing a new wave of creative talent, and among the rising names is Sharik Khan Jr. 
+        Known for his originality, consistency, and digital presence, he continues to build a strong identity across major music platforms.
+    </p>
+
+    <a 
+        href="https://jrnewsmedia.github.io/articles/sharik-khan-jr-independent-music-artist.html" 
+        class="read-more"
+    >
+        READ FULL ARTICLE...
+    </a>
+</article>
+            
 <article class="news-article">
     <h2 class="article-title">Digital Queen Mahee Pande Sends Special Video Wish to Sharik khan jr, Fuels Collaboration Rumours</h2>
     <p class="meta">By Neha Naaz | November 11, 2025 | Celebrity News</p>
