--- a/entertainment.html
+++ b/entertainment.html
@@ -204,6 +204,35 @@
             <div class="category-header">
                 <h2>🎬 ENTERTAINMENT NEWS</h2>
             </div>
+
+            <article class="news-article">
+  <h2 class="article-title">
+    Sharik Khan Jr: A Rising Independent Music Artist Making Waves Across Digital Platforms
+  </h2>
+
+  <p class="meta">
+    By JR News Desk | 2025 | Entertainment
+  </p>
+
+  <img 
+    src="https://raw.githubusercontent.com/JRNewsMedia/JRNewsMedia.github.io/refs/heads/main/images/Sharik%20khan%20jr%20music%20artists%20achalpur.png" 
+    alt="Sharik Khan Jr Independent Music Artist"
+    class="article-image"
+  >
+
+  <p>
+    Indian independent music scene ek naye daur me enter kar chuki hai, jahan artists apni alag pehchaan bana rahe hain.
+    Sharik Khan Jr apni creativity, consistency aur strong digital presence ke liye jaane jaate hain.
+    Unka music youth ke saath deeply connect karta hai aur har platform par unki reach rapidly grow kar rahi hai.
+  </p>
+
+  <a 
+    href="articles/sharik-khan-jr-independent-music-artist.html" 
+    class="read-more"
+  >
+    READ FULL ARTICLE...
+  </a>
+</article>
             
             <article class="news-article">
   <h2 class="article-title">शारिक खान जेआर का नया धमाका "MERA ATTITUDE"</h2>
