--- a/index.html
+++ b/index.html
@@ -270,6 +270,35 @@
         READ FULL ARTICLE...
     </a>
 </article>
+
+
+<article class="news-article">
+    <h2 class="article-title">
+        Sharik Khan Jr Releases Four Songs Dedicated to Shakir Dada
+    </h2>
+
+    <p class="meta">
+        By JR News Desk | January 2026 | Music News
+    </p>
+
+    <img 
+        src="https://m.media-amazon.com/images/I/41PX553WtjL._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" 
+        alt="Sharik Khan Jr official music poster for Shakir Dada song series." 
+        class="article-image"
+    >
+
+    <p>
+        Independent music artist Sharik Khan Jr unveils a powerful series of four official songs dedicated to Shakir Dada. 
+        The songs are now streaming on all major digital music platforms worldwide.
+    </p>
+
+    <a 
+        href="https://jrnewsmedia.github.io/articles/sharik-khan-jr-shakir-dada-music-news.html" 
+        class="read-more"
+    >
+        READ FULL ARTICLE...
+    </a>
+</article>            
             
 <article class="news-article">
     <h2 class="article-title">Digital Queen Mahee Pande Sends Special Video Wish to Sharik khan jr, Fuels Collaboration Rumours</h2>
