--- a/entertainment.html
+++ b/entertainment.html
@@ -233,6 +233,36 @@
     READ FULL ARTICLE...
   </a>
 </article>
+
+
+<article class="news-article">
+  <h2 class="article-title">
+    शारिक खान जेआर ने शाकिर दादा को समर्पित चार नए गाने किए रिलीज
+  </h2>
+
+  <p class="meta">
+    By JR News Desk | January 2026 | Music News
+  </p>
+
+  <img 
+    src="https://m.media-amazon.com/images/I/41PX553WtjL._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg" 
+    alt="शारिक खान जेआर द्वारा शाकिर दादा को समर्पित नए गानों का पोस्टर" 
+    class="article-image"
+  >
+
+  <p>
+    इंडिपेंडेंट म्यूजिक आर्टिस्ट शारिक खान जेआर ने शाकिर दादा को समर्पित चार आधिकारिक गानों की एक खास सीरीज़ रिलीज की है।
+    ये सभी गाने Apple Music, Spotify, JioSaavn समेत सभी प्रमुख डिजिटल म्यूजिक प्लेटफॉर्म्स पर उपलब्ध हैं और श्रोताओं से
+    शानदार प्रतिक्रिया मिल रही है।
+  </p>
+
+  <a 
+    href="articles/sharik-khan-jr-shakir-dada-music-news.html" 
+    class="read-more"
+  >
+    READ FULL ARTICLE...
+  </a>
+</article>
             
             <article class="news-article">
   <h2 class="article-title">शारिक खान जेआर का नया धमाका "MERA ATTITUDE"</h2>
